# Social-Wingman

./: .env.example  .gitignore  CLAUDE.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
agent/: .env.example  agent.py  personas.py  pyproject.toml  test_agent.py
app/: globals.css  layout.tsx  page.tsx
app/api/deepgram/token/: route.ts
app/api/livekit/token/: route.ts
app/api/wingman/coherence/: route.ts
app/api/wingman/suggest/: route.ts
app/api/wingman/tts/: route.ts
app/test/: page.tsx
components/: AnalyticsSummary.tsx  BatteryMeter.tsx  ConversationView.tsx  DebugDrawer.tsx  FlowBall.tsx  ListeningIndicator.tsx  Onboarding.tsx  RadialBatteryMeter.tsx  SessionSetup.tsx  SimpleVoiceRoom.tsx  StatusText.tsx  SuggestionToast.tsx  VoiceOrb.tsx
components/Analytics/: GradeHero.tsx  InsightCard.tsx  QuickStats.tsx  index.ts
components/SessionSetup/: ContextPills.tsx  GlassInput.tsx  PersonaCard.tsx  index.ts
hooks/: useAudioCue.ts  useSession.ts  useSocialBattery.ts  useVoiceActivityDetection.ts  useWhisperTTS.ts  useWingmanSuggestion.ts  useWingmanTranscription.ts
public/: audio-test.html
types/: analytics.ts  battery.ts  transcript.ts
